--- a/index.html
+++ b/index.html
@@ -477,6 +477,27 @@
             </li>
           </ul>
         </div>
+        <div class="container-subscribe">
+          <form class="form-subscribe">
+            <label class="label-subscribe">
+              Subscribe
+              <input
+                class="input-subscribe"
+                type="text"
+                name="subscribe"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="btn-subscribe" type="submit">
+              Subscribe
+              <span class="footer-input-icon">
+                <svg class="input-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </span>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!--#endregion footer-->
