add modal window

--- a/index.html
+++ b/index.html
@@ -501,5 +501,31 @@
       </div>
     </footer>
     <!--#endregion footer-->
+    <div class="modal-overlay is-open">
+      <div class="modal">
+        <svg>Close</svg>
+        <p>Leave your contacts and we will call you back</p>
+        <label class="label-model">
+          Name
+          <input class="input-model" type="text" name="user-name" autofocus />
+        </label>
+        <label class="label-model">
+          Phone
+          <input class="input-model" type="tel" name="user-tel" />
+        </label>
+        <label class="label-model">
+          Email
+          <input class="input-model" type="email" name="user-email" />
+        </label>
+        <label class="label-model">
+          Comment
+          <textarea
+            class="textarea-model"
+            name="user-comment"
+            placeholder="Text input"
+          ></textarea>
+        </label>
+      </div>
+    </div>
   </body>
 </html>
