--- a/index.html
+++ b/index.html
@@ -501,30 +501,49 @@
       </div>
     </footer>
     <!--#endregion footer-->
-    <div class="modal-overlay is-open">
+    <div class="backdrop is-open">
       <div class="modal">
-        <svg>Close</svg>
-        <p>Leave your contacts and we will call you back</p>
-        <label class="label-model">
-          Name
-          <input class="input-model" type="text" name="user-name" autofocus />
-        </label>
-        <label class="label-model">
-          Phone
-          <input class="input-model" type="tel" name="user-tel" />
-        </label>
-        <label class="label-model">
-          Email
-          <input class="input-model" type="email" name="user-email" />
-        </label>
-        <label class="label-model">
-          Comment
-          <textarea
-            class="textarea-model"
-            name="user-comment"
-            placeholder="Text input"
-          ></textarea>
-        </label>
+        <button class="modal-close-btn" type="button">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="div-container-modal">
+            <label class="label-model" for="user-name">Name</label>
+            <div class="div-modal-input">
+              <input
+                class="input-model"
+                type="text"
+                name="user-name"
+                id="name"
+                required
+                autofocus
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <!-- 
+          <label class="label-model">
+            Phone
+            <input class="input-model" type="tel" name="user-tel" />
+          </label>
+          <label class="label-model">
+            Email
+            <input class="input-model" type="email" name="user-email" />
+          </label>
+          <label class="label-model">
+            Comment
+            <textarea
+              class="textarea-model"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </label> -->
+        </form>
       </div>
     </div>
   </body>
