--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                 class="input-model"
                 type="text"
                 name="user-name"
-                id="name"
+                id="user-name"
                 required
                 autofocus
               />
@@ -526,23 +526,61 @@
               </svg>
             </div>
           </div>
-          <!-- 
-          <label class="label-model">
-            Phone
-            <input class="input-model" type="tel" name="user-tel" />
-          </label>
-          <label class="label-model">
-            Email
-            <input class="input-model" type="email" name="user-email" />
-          </label>
-          <label class="label-model">
-            Comment
+          <div class="div-container-modal">
+            <label class="label-model" for="user-tel">Phone</label>
+            <div class="div-modal-input">
+              <input
+                class="input-model"
+                type="tel"
+                name="user-tel"
+                id="user-tel"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="div-container-modal">
+            <label class="label-model" for="user-email">Email</label>
+            <div class="div-modal-input">
+              <input
+                class="input-model"
+                type="email"
+                name="user-email"
+                id="user-email"
+                required
+              />
+              <svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="div-container-modal-comment">
+            <label class="label-model-comment" for="comment">Comment</label>
             <textarea
-              class="textarea-model"
-              name="user-comment"
+              class="textarea-comment"
+              id="comment"
               placeholder="Text input"
             ></textarea>
-          </label> -->
+          </div>
+          <div class="modal-cont-checkbox">
+            <input
+              class="input-checkbox visually-hidden"
+              type="checkbox"
+              id="user-checkbox"
+            />
+            <label class="custom-label-checkbox" for="user-checkbox">
+              <span class="custom-checkbox">
+                <svg class="icon-checkbox" width="16" height="16">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="link-checkbox" href="#"> Privacy Policy</a>
+            </label>
+          </div>
+          <button class="button-send" type="submit">Send</button>
         </form>
       </div>
     </div>
