--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
       </div>
     </footer>
     <!--#endregion footer-->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
