--- a/index.html
+++ b/index.html
@@ -478,9 +478,9 @@
           </ul>
         </div>
         <div class="container-subscribe">
+          <p class="text-subscribe">Subscribe</p>
           <form class="form-subscribe">
             <label class="label-subscribe">
-              Subscribe
               <input
                 class="input-subscribe"
                 type="text"
