--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       </div>
     </footer>
     <!--#endregion footer-->
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="modal-close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
@@ -555,13 +555,12 @@
             </div>
           </div>
           <div class="div-container-modal-comment">
-            <label class="label-model-comment" for="user-comment"
-              >Comment</label
-            >
+            <label class="label-model" for="user-comment">Comment</label>
             <textarea
               class="textarea-comment"
               id="user-comment"
               placeholder="Text input"
+              name="user-comment"
             ></textarea>
           </div>
           <div class="modal-cont-checkbox">
